# ClusteringAlgorithm

./: .gitignore  CMakeLists.txt  Cluster.h  Document1.docx  Node.cpp  Node.h  NodeCloud.cpp  NodeCloud.h  NodeCloud2D.cpp  NodeCloud2D.h  NodeCloudFactory.cpp  NodeCloudFactory.h  NodeCluster.cpp  NodeCluster.h  NodeFactory.h  ThreadingOperations.h  UnionFind.h  main.cpp
ClusteringAlgorithms/: ClusteringAlgorithm.h  DepthFirstSearchClustering.h  ImmediateClustering.h  UnionFindBunchClustering.h  UnionFindClustering.h  UnionFindPerNodeClustering.h
HardwareAcceleration/: CudaAcceleration.cuh  HardwareAcceleration.h  HardwareAccelerationConfig.cpp  HardwareAccelerationConfig.h  ThreadingOperations.h
Tests/: AlgorithmsTimeComparisonTest.h  AltairExample.h  AltairTask.h  MultithreadingTest.h  ProofOfConceptTest.h  RandomDomain2DTest.h  RandomDomainND.h  TemplateNodeCreationTest.h  Test.cpp  Test.h
